--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Glidio</title>
     <script type="text/javascript" src="/vendor/phaser.min.js"></script>
+    <script type="text/javascript" src="/src/vario.js"></script>
     <script type="text/javascript" src="/src/main.js"></script>
   </head>
 
